# DataModeler

./: .gitignore  CMakeLists.txt  README.md  attribute.hpp  entity.hpp  main.cpp  model.cpp  model.hpp  types.json
examples/: CmakeLists.txt  main.cpp
include/datamodeler/: CmakeLists.txt  config.hpp  modeleditor.hpp  scriptgenerator.hpp
include/datamodeler/model/: _modelComponent.hpp  attribute.hpp  entity.hpp  model.hpp  modelsaver.hpp  relationship.hpp
src/: CMakeLists.txt  CMakeLists.txttxt  attribute.cpp  config.cpp  config.hpp  main.cpp  model.cpp  model.hpp  modeleditor.cpp  relationship.cpp  relationship.hpp  scriptgenerator.cpp  types.json
src/model/: _modelComponent.hpp  attribute.cpp  attribute.hpp  entity.cpp  entity.hpp  model.cpp  model.hpp  modelsaver.cpp  modelsaver.hpp  relationship.cpp  relationship.hpp
src/modelComponents/: attribute.hpp  entity.cpp  entity.hpp  relationship.cpp  relationship.hpp
tests/: CmakeLists.txt  model_tests.cpp
